Implemented BinarySearchTree and RedBlackTree